# PytoSQL

./: pyproject.toml
src/pytosql/: __init__.py  expr.py  query_context.py  sanitizer.py  template_query.py
test/: query_test.py
