[project]
name = "pytosql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dariel Buret", email = "darielburetrivera@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "more-itertools>=11.0.2",
    "psycopg2-binary>=2.9.12",
    "pyodbc>=5.3.0",
]

[project.scripts]
pytosql = "pytosql:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
